# ray-clay

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.Dockerfile  ui.Dockerfile
ray_clay/: main.py  models.py
server/: __demo.py  _constants.py  main.py
server/managers/: database.py  ray.py  thread.py  train.py
ui/: app.py
